Struggling with the responsiveness, added css for the header

--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,19 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&family=Righteous&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header class="header-content">
-      <!-- Some kind of logo and navbar -->
-      <!-- <img class="technigo-logo" src="./logo.svg" alt="technigo logotype" /> -->
+    <header class="header">
       <div class="fox-logo">
-        <img class="header-logo" src="./foxlogo.svg" alt="team foxes logotype" />
-        <h1>FOX NEWS</h1>
+        <img src="./foxlogo.svg" alt="team foxes logotype" />
+        <h1>Fox News</h1>
       </div>
       <nav class="navigation">
-        <a href="#">First menu item</a>
-        <a href="#">Second menu item</a>
+          <a href="#">About The Foxes</a>
+          <a href="#">Want to contribute?</a>
+          <a class="button-link" href="#">Subscribe!</a> 
       </nav>
     </header>
 
@@ -34,8 +34,9 @@
     <section class="small-news-container">
       <!-- The other news  -->
       <div class="small-news-item"> 
-        <img class="small-news-img" src="./1.png" alt="#"/>
-        <h3 class="small-news-text">This is the small news heading</h3>
+        <a href="https://www.wired.com/story/gadget-lab-podcast-506/"> <img class="small-news-img" src="./color-img.png" alt="#"/>
+        <h3 class="small-news-text">How Humanity’s Obsession With Color Has Shaped Our Modern World</h3>
+        </a>
       </div>
       <div class="small-news-item">
         <img class="small-news-img" src="./2.png" alt="#" />
