--- a/code/index.html
+++ b/code/index.html
@@ -8,14 +8,40 @@
   </head>
   <body>
     <header>
+      <div class="logo-container">
+        <img class="logo" height="50px" src="logo.svg" />
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a class="nav-item" href="#">First link</a></li>
+          <li><a class="nav-item" href="#">Second link</a></li>
+          <li><a class="nav-item" href="#">Third link</a></li>
+          <li><a class="nav-item" href="#">Fourth link</a></li>
+        </ul>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
+      <h1>big news</h1>
+      <img src="https://picsum.photos/200/300" alt="big-news">
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      <h2>other news</h2>
+      <img src="https://picsum.photos/200/300" alt="other-news">
+      
       <!-- The other news  -->
     </section>
   </body>
