fixed media queries and added more html pages

--- a/code/about.html
+++ b/code/about.html
@@ -30,10 +30,12 @@
         <img class="big-image" src="https://i.ibb.co/7R2bXxq/Link.png">
       <div class="big-text">
         <h3>ABOUT</h3>
-        <p>adjfhdfhlkjdshlfjksdflkhsdlkjfhsdljfhsdlkjfhsldjkfhhl
-            sfkbskdjlghjkghkjlgflkjsfjkshfdhsdlkfjhsdkjfhsdkjfh
-            sfdlkjfhsdkjghalkjfghkjlsahdfjkflhsdfkjhsdkflsdlkfsdkjfh
-            dfkjgghslkjsdhfkshdfjkhsdfkjshdfkjlhsdjkfhsdfhsdjkfhsdkjfh
+        <p>PixelBurger offers an experience not available anywhere else in the world. 
+          Celebrating videogames exciting past and future with style and purpose, it is both an 
+          intelligent and emotional rediscovery of the IPs that defined an industry. 
+          Famed for its informative and in-depth stories, access to legendary developers
+           and its sheer enthusiasm for the games it covers, the award-winning PixelBurger 
+           is a worldwide phenomenon universally loved by an entire industry.
         </p>
       </div>
 
