--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
         <a href="about.html">ABOUT</a>
       </li>
       <li class="nav-item">
-        <a href="contact.html">CONTACT</a>
+        <a href="./contact.html">CONTACT</a>
       </li>
       </nav>
   </header>
@@ -47,16 +47,19 @@
       <!-- The other news-->
       <a class="small-image" href="eastward.html">
         <img class="small" src="https://assets1.ignimgs.com/2019/08/23/eastward---button-fin-1566519472279.jpg">
-        </a>
-        
+        <div class="bottom-center">EASTWARD</div>    
+      </a>  
       <a class="small-image" href="nino-kuni.html">
         <img class="small" src="https://cdns.kinguin.net/media/catalog/category/cache/1/hi_image/9df78eab33525d08d6e5fb8d27136e95/nino8.jpg">
+        <div class="bottom-center">NINO-KUNI</div>
       </a>
-      <a class="small-image" href="about.html">
-        <img class="small" src="https://sm.ign.com/t/ign_jp/game/e/eastward/eastward_v4bn.128.jpg">
+      <a class="small-image" href="./fez.html">
+        <img class="small" src="https://images.nintendolife.com/fb2e057967efd/fez-cover.cover_large.jpg">
+        <div class="bottom-center">FEZ</div>
       </a>
-      <a class="small-image" href="about.html">
-        <img class="small"src="https://sm.ign.com/t/ign_jp/game/e/eastward/eastward_v4bn.128.jpg">
+      <a class="small-image" href="./narita-boy.html">
+        <img class="small"src="https://assets-prd.ignimgs.com/2021/02/05/narita-boy-button-01-1612487969751.jpg">
+        <div class="bottom-center">NARITA-BOY</div>
       </a> 
 
     </section>
