further indentations fixes

--- a/code/index.html
+++ b/code/index.html
@@ -26,11 +26,11 @@
     <div id="big-news"></div>
       <section class="big-news">
             <img class="big-news-img" src="images/main.jpg" alt="">
-          <div class="intro">
-            <h2><strong>It's a cats world</strong></h2>
-            <p>“I am what I am. I would tell you what you want to know if I could, for you have been kind to me. But I am a cat, and no cat anywhere ever gave anyone a straight answer.”</p> 
-            <p><strong>― S. Beagle, The Last Unicorn</strong></p>
-          </div>
+        <div class="intro">
+          <h2><strong>It's a cats world</strong></h2>
+          <p>“I am what I am. I would tell you what you want to know if I could, for you have been kind to me. But I am a cat, and no cat anywhere ever gave anyone a straight answer.”</p> 
+          <p><strong>― S. Beagle, The Last Unicorn</strong></p>
+        </div>
       </section>
 
 <!---small news-->
@@ -47,7 +47,7 @@
           <img src="images/pose.jpg" alt="">
           <h3><strong>Paw-sibility = Possibility</strong></h3>
           <p><strong><em>noun</em></strong>
-          <p>1. A thing that may happen or be the case when a cat is around</p>
+          <p>1. A thing that may happen or be the case when a cat is around.</p>
           <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
         </div> 
         <div class="small-news">
