--- a/code/index.html
+++ b/code/index.html
@@ -37,56 +37,56 @@
   <div id="small-news"></div>
     <section class="container">
         <div class="small-news">
-          <img src="images/sitting.jpg" alt="">
+          <img class="small-image" src="images/sitting.jpg" alt="">
           <h3><strong>Purr-haps = Perhaps</strong></h3>
           <p><strong><em>adverb</em></strong></p>
           <p>1. Used to express uncertainty or possibility when a cat is around.</p>
           <p>2. “…Did your cat just eat my tuna sandwich? Purr-haps.”</p>
         </div> 
         <div class="small-news">
-          <img src="images/pose.jpg" alt="">
+          <img class="small-image" src="images/pose.jpg" alt="">
           <h3><strong>Paw-sibility = Possibility</strong></h3>
           <p><strong><em>noun</em></strong>
           <p>1. A thing that may happen or be the case when a cat is around.</p>
           <p>2.“…Did your cat just eat my tuna sandwhich? It’s a paw-sibility.”</p>
         </div> 
         <div class="small-news">
-          <img src="images/eskil.jpg" alt="">
+          <img class="small-image" src="images/eskil.jpg" alt="">
           <h3><strong>A-paw-ling = Appalling</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1. Causing shock or dismay for a cat; horrific.</p>
           <p>2. “The cat smelled a-paw-ling after running around the alleyways all night long.”</p>
         </div> 
         <div class="small-news">
-          <img src="images/sitting2.jpg" alt="">
+          <img class="small-image" src="images/sitting2.jpg" alt="">
           <h3><strong>Claw-ful = Awful</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1.Very bad or unpleasant; especially when pertaining to litter boxes.</p>
           <p>2.“The litter box smelled claw-ful after not changing it for a while.”</p>
         </div> 
         <div class="small-news">
-          <img src="images/elton.jpg" alt="">
+          <img class="small-image" src="images/elton.jpg" alt="">
           <h3><strong>Fur real = For Real</strong></h3>
           <p><strong><em>informal</em></strong></p>
           <p>1. Used to assert that a cat is genuine or is actually the case.</p>
           <p>2.“I’m not playing games with you, mouse – this is fur real!”</p>
         </div> 
         <div class="small-news">
-          <img src="images/teeth.jpg" alt="">
+          <img class="small-image" src="images/teeth.jpg" alt="">
           <h3><strong>Hiss-terical = Hysterical</strong></h3>
           <p><strong><em>adjective</em></strong></p>
           <p>1.Deriving from or affected by a cat with uncontrolled extreme emotion.</p>
           <p>2. “As soon as the cat entered the vet, he became hiss-terical.”</p>
         </div> 
         <div class="small-news">
-          <img src="images/elton1.jpg" alt="">
+          <img class="small-image" src="images/elton1.jpg" alt="">
           <h3><strong>Meow = Now</strong></h3>
           <p><strong><em>adverb</em></strong></p>
           <p>1. At the present time or moment; made popular by the 2001 cult-film classic, Super Troopers.</p>
           <p>2. “Go refill the food bowl – right meow!”</p>
         </div> 
         <div class="small-news">
-          <img src="images/eskil1.jpg" alt="">
+          <img class="small-image" src="images/eskil1.jpg" alt="">
           <h3><strong>Paw-er = Power</strong></h3>
           <p><strong><em>noun</em></strong></p>
           <p>1. The capacity or ability to direct or influence the behavior of other cats.</p>
