--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
     <header class="top-header">
         <img class="logo-pic" src="./DogMagazine_Logo.png" alt="logo">
         <h1>THE DOG</h1>
-        <h3>MAGAZINE</h3>
+        <h2>MAGAZINE</h2>
         <nav class="nav-bar">
           <a href="#">Start page</a>
           <a href="#">Big news</a>
@@ -53,6 +53,7 @@
         </div>
         <div class= "grid-5">
             <img class="little-pic" src="./jamie-street-uNNCs5kL70Q-unsplash.jpg" alt="Dog caring a branch">
+            <h2>Puppy's teething. What to do when your dog chews everything</h2>
         </div>
         <div class= "grid-6">
             <img class="little-pic" src="./sdf-rahbar-dw7paFI1jnM-unsplash-2.jpg" alt="Dog under blanckets">
@@ -65,13 +66,12 @@
               <h3>Pros and cons of group walking</h3>
            </div>
         </div>  
-        <footer class="footer-info"> 
-          <a href="#">Contact us</a>
-          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons">
- 
-     </footer>
-
     </section>
+      <footer class="footer-info"> 
+          <h2>Contact us</h2>
+          <img class="footer-pic" src="./Social-Icons-01-Free-SVG.png" alt="Social media icons"></p>
+      </footer> 
+  
 
   </body>
 </html>
