adjust navbar padding+border for different views

--- a/code/index.html
+++ b/code/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 			<nav>
-				<a href="http://" target="_blank">News</a>
+				<a class="first-nav" href="http://" target="_blank">News</a>
 				<a href="http://" target="_blank">Opinion</a>
 				<a href="http://" target="_blank">Sport</a>
 				<a href="http://" target="_blank">Culture</a>
