Finished coding for different media queries

--- a/code/index.html
+++ b/code/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <img  src="./logo.svg" alt="site-logo" class="site-logo">
+      <div class="head-logo">
+        <img  src="./logo.svg" alt="site-logo" class="site-logo">
+      </div>
       <h1 class="header-text">The Daily Clubber</h1>
     </header>
       <nav> 
@@ -44,8 +49,8 @@
         <p>Draaimolen 2021 is going to be a special one. </p>
       </div>
       <div class="events">
-        <img src="./de-0827-1458473-1779846-front.jpeg" alt="staub-festival" class="events-photo">
-        <p>Line-up will be announced soon</p>
+        <img src="./se-0828-1460090-front.jpeg" alt="tradgarden-party" class="events-photo">
+        <p>Daytime Sessions#66</p>
       </div>
     </section>
 
@@ -69,7 +74,7 @@
     </section>
 
     <footer>
-      &copy;Copyright 2021 
+      <p>&copy;Copyright 2021</p> 
       <a href="#efthymios.karakasis@gmail.com">Email us</a>
 
     </footer>
