Done with mobile first

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,90 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <!-- Meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto&display=swap');
+      </style>
   </head>
+  
   <body>
-    <header>
+    <!-- <div class="big box"> -->
+      <header class="header">
+        <img class="logo" src=images/36.jpg alt="Small town logo"/>
+        <h1>Small Town News</h1>
+        <nav class="navigation">
+          <a href="#">Latest news</a>
+          <a href="#">Local blog</a>
+          <a href="#">Contact</a>
+        </nav>  
       <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <article class="big-news">
+      <img class="big-news-image" src="images/cobblestones.jpg" alt="cobblestones" />
+      <h2 class="big-news-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </h2>
+    </article>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="grid-news">
+      <article class="news-card">
+        <img class="news-card-image" src=images/ice-cream.png alt="ice-cream" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image" src="images/lake.jpg" alt="lake" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image"  src="images/sunflower.jpg" alt="sunflowers" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image"  src="images/coffe.jpg" alt="coffe cups" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image"  src="images/pets.jpg" alt="pets" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image"  src="images/sky.jpg" alt="sky" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+
+      <article class="news-card">
+        <img class="news-card-image"  src="images/wedding.jpg" alt="wedding" />
+        <p class="news-card-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p> 
+      </article>
+      
+      
     </section>
+    <footer>
+      <a href="https://sv.vecteezy.com/gratis-vektor/bakgrund">Bakgrund Vektorer av Vecteezy</a>
+    </footer>
+  <!-- </div> -->
   </body>
 </html>
