--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
         
           <a id="nav-button-1" href="#bignewz" class="nawbar-btn">Veckans Nyhet</a>
-          <a id="nav-button-2" href="#regularnewz" class="nawbar-btn">Tidigare tips</a>
+          <a id="nav-button-2" href="#regular-news-section" class="nawbar-btn">Tidigare tips</a>
           <a id="nav-button-3" href="https://www.aftonbladet.se/tipsa" target="_blank" class="nawbar-btn">Kontakta oss</a>
           <a id="nav-button-4" href="https://www.aftonbladet.se/nojesbladet/tv" target="_blank" class="nawbar-btn">Utforska</a>
         </div>
