fixed the logo and colorstyles

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <img class="logo" src="./lakelogo-cropped.svg" alt="Fjord Logo" />
+        <img class="logo" src="./lakelogo_white.svg" alt="Fjord Logo" />
         <h1>A fjord with no name</h1>
       </div>
       <nav>
@@ -76,7 +76,7 @@
     </section>
 
     <footer>
-      <p class="footer-text">© 2021 Birgit Nehrwein</p>
+      <p class="footer-text">&copy 2021 BumBumBurka</p>
     </footer>
   </body>
 </html>
